# The-coolest-game-in-the-wold-

GaAaME/: GaAaME.pro  game.cpp  game.h  game.ui  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  resource.qrc  settings.ui
QtGAAAME/: QtGAAAME.pro  mainwindow.ui  mainwindow.ui.autosave
Server/: CMakeLists.txt  Characters.cpp  Characters.h  Network.cpp  Network.h  ServI.cpp  ServI.h  Sessions.cpp  Sessions.h  main.cpp
build-GaAaME-Desktop_Qt_5_12_2_GCC_64bit-Debug/: GaAaME  Makefile  moc_game.cpp  moc_mainwindow.cpp  qrc_resource.cpp  ui_game.h  ui_mainwindow.h
